# picotls

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: ci.yml  mbedtls.yml  win_compile.yml
cmake/: FindBoringSSL.cmake  FindMbedTLS.cmake  boringssl-adjust.cmake  dtrace-utils.cmake
fuzz/: fuzz-asn1.c  fuzz-client-hello.c  fuzz-server-hello.c
fuzz/fuzz-server-hello-corpus/: -p  early_data
include/: containers.h  fifo.h  picotcpls.h  picotls.h  picotls_openssl.h  picotypes.h
include/picotls/: asn1.h  certificate_compression.h  cred_buffer.h  embedded.h  ffx.h  fusion.h  hpke.h  ipp-crypto.h  mbedtls.h  minicrypto.h  openssl.h  pembase64.h  ptls_mbedtls.h  ptlsbcrypt.h  sodium.h
lib/: Base64.c  Base64.h  aead_crypt.c.h  aead_crypt_fuzz.c.h  asn1.c  certificate_compression.c  chacha20poly1305.h  cifra.c  containers.c  cred_buffer.c  crypto-openssl.c  ffx.c  fifo.c  fusion.c  hpke.c  ipp-crypto.c  libaegis.h  log.c  mbedtls.c  mbedtls_sign.c  minicrypto-pem.c  minicrypto.c  openssl.c  pembase64.c  picotcpls.c  picotls.c  ptls_mbedtls.c  ptlsbcrypt.c  ptlslog.c  quiclb-impl.h  sign.c  sodium.c  uecc.c  verify.c
lib/cifra/: aes-common.h  aes.c  aes128.c  aes256.c  chacha20.c  libaegis.c  random.c  x25519.c
misc/: build_picotls.ps1  docker-ci.mk
misc/dtrace/: bpftrace.d  dtrace.d
picotls.xcodeproj/: project.pbxproj
picotlsvs/: picotlsvs.sln
picotlsvs/Release/: cifra.lib  microecc.lib  picotls.lib  picotlsvs.iobj  picotlsvs.ipdb
picotlsvs/cifra/: cifra.vcxproj
picotlsvs/cifra/Release/cifra.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
picotlsvs/fusiontest/: fusiontest.vcxproj
picotlsvs/microecc/: microecc.vcxproj
picotlsvs/microecc/Release/microecc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
picotlsvs/picotls/: picotls.vcxproj  picotls.vcxproj.filters  wincompat.h  wintimeofday.c
picotlsvs/picotls-bcrypt/: picotls-bcrypt.vcxproj
picotlsvs/picotls-esni/: picotls-esni.vcxproj
picotlsvs/picotls-minicrypto/: picotls-minicrypto.vcxproj  picotls-minicrypto.vcxproj.filters
picotlsvs/picotls/Release/picotls.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
picotlsvs/picotlsvs/: ec_cert.pem  ec_key.pem  picotlsvs.c  picotlsvs.vcxproj
picotlsvs/picotlsvs/Release/picotlsvs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  picotlsvs.lastbuildstate  picotlsvs.write.1u.tlog
picotlsvs/test-fusion/: test-fusion.vcxproj  test-fusion.vcxproj.filters
picotlsvs/testfusion/: testfusion.vcxproj
picotlsvs/testopenssl/: testopenssl.vcxproj
src/: esni.c  picotls.c  speed.c
t/: cli-minicrypto.c  cli.c  crypto-openssl.c  delcred.c  e2e.t  ech-live.t  embedded.c  fusion.c  fusionbench.c  hpke.c  mbedtls.c  minicrypto.c  openssl.c  picotls.c  ptls_mbedtls.c  ptlsbench.c  sodium.c  test.c  test.h  util.h
t/assets/: not_a_valid_pem_file.pem
t/assets/ed25519/: cert.pem
t/assets/secp384r1/: cert.pem
t/assets/secp521r1/: cert.pem
t/bpf/: Makefile
t/virt/: README.md  picotls_vm_setup.sh
