CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
CMAKE_POLICY(SET CMP0003 NEW)

PROJECT(picotls)

FIND_PACKAGE(PkgConfig REQUIRED)

SET(CMAKE_C_FLAGS "-Wall -O2 -g ${CC_WARNING_FLAGS} ${CMAKE_C_FLAGS}")
INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR} deps/picotest include)
SET(TEST_EXES)

ADD_LIBRARY(picotls-core lib/picotls.c)

FIND_PACKAGE(OpenSSL)
IF (OPENSSL_FOUND AND NOT (OPENSSL_VERSION VERSION_LESS "1.0.1"))
    MESSAGE(WARNING "Enabling OpenSSL support")
    INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
    ADD_LIBRARY(picotls-openssl lib/openssl.c)
    ADD_EXECUTABLE(cli t/cli.c)
    TARGET_LINK_LIBRARIES(cli picotls-openssl picotls-core ${OPENSSL_LIBRARIES})
    ADD_EXECUTABLE(test-openssl.t deps/picotest/picotest.c t/picotls.c t/openssl.c)
    TARGET_LINK_LIBRARIES(test-openssl.t ${OPENSSL_LIBRARIES})
    SET(TEST_EXES ${TEST_EXES} test-openssl.t)
ELSE ()
    MESSAGE(WARNING "Disabling OpenSSL support")
ENDIF ()

PKG_CHECK_MODULES(LIBSODIUM libsodium)
IF (LIBSODIUM_FOUND)
    MESSAGE(WARNING "Enabling libsodium support")
    INCLUDE_DIRECTORIES(${LIBSODIUM_INCLUDE_DIRS})
    LINK_DIRECTORIES(${LIBSODIUM_LIBRARY_DIRS})
    ADD_LIBRARY(picotls-sodium lib/sodium.c)
    ADD_EXECUTABLE(test-sodium.t deps/picotest/picotest.c t/picotls.c t/sodium.c)
    TARGET_LINK_LIBRARIES(test-sodium.t ${LIBSODIUM_LIBRARIES})
    SET(TEST_EXES ${TEST_EXES} test-sodium.t)
ELSE ()
    MESSAGE(WARNING "Disabling libsodium support")
ENDIF ()

ADD_CUSTOM_TARGET(check prove --exec '' -v ./*.t DEPENDS ${TEST_EXES})

IF ("${CMAKE_SYSTEM_NAME}" MATCHES "SunOS")
    TARGET_LINK_LIBRARIES(cli "socket" "nsl")
ENDIF ()
